--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Xian Van Droogenbroeck</h1>
     </header>
     <nav>
-        <a href="#website1">AristoElegance</a>
+        <a href="Code opfrissen/">AristoElegance</a>
         <a href="#website2">Website 2</a>
         <a href="#website3">Website 3</a>
     </nav>
