--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <section id="website1">
             <h2>AristoElegance</h2>
             <p>Van opdracht "Even opfrissen".</p>
-            <a class="website-link animated" href="Code opfrissen/">Visit Website</a>
+            <a class="website-link animated" href="Code opfrissen/">Bezoek Website</a>
         </section>
         <section id="website2">
             <h2>Website 2</h2>
             <p>...</p>
-            <a class="website-link animated" href="#">Visit Website</a>
+            <a class="website-link animated" href="#">Bezoek Website</a>
         </section>
         <section id="website3">
             <h2>Website 3</h2>
             <p>...</p>
-            <a class="website-link animated" href="#">Visit Website</a>
+            <a class="website-link animated" href="#">Bezoek Website</a>
         </section>
     </div>
     <script>
