--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
         <a href="Code opfrissen/">AristoElegance</a>
-        <a href="#website2">Website 2</a>
+        <a href="Herhaling HTML-CSS Hero Header/">Kreed</a>
         <a href="#website3">Website 3</a>
     </nav>
     <div class="container">
@@ -23,9 +23,9 @@
             <a class="website-link animated" href="Code opfrissen/">Bezoek Website</a>
         </section>
         <section id="website2">
-            <h2>Website 2</h2>
-            <p>...</p>
-            <a class="website-link animated" href="#">Bezoek Website</a>
+            <h2>Kreed</h2>
+            <p>Van opdracht "Herhaling HTML/CSS Hero Header"</p>
+            <a class="website-link animated" href="Herhaling HTML-CSS Hero Header/">Bezoek Website</a>
         </section>
         <section id="website3">
             <h2>Website 3</h2>
