--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="Code opfrissen/">AristoElegance</a>
         <a href="Herhaling HTML-CSS Hero Header/">Kreed</a>
-        <a href="#website3">Website 3</a>
+        <a href="/Responsive hero header/">Responsive hero header</a>
     </nav>
     <div class="container">
         <section id="website1">
@@ -24,13 +24,13 @@
         </section>
         <section id="website2">
             <h2>Kreed</h2>
-            <p>Van opdracht "Herhaling HTML/CSS Hero Header"</p>
+            <p>Van opdracht "Hero Header"</p>
             <a class="website-link animated" href="Herhaling HTML-CSS Hero Header/">Bezoek Website</a>
         </section>
         <section id="website3">
-            <h2>Website 3</h2>
-            <p>...</p>
-            <a class="website-link animated" href="#">Bezoek Website</a>
+            <h2>Responsive hero header</h2>
+            <p>Van opdracht "Responsive hero header"</p>
+            <a class="website-link animated" href="/Responsive hero header/">Bezoek Website</a>
         </section>
     </div>
     <script>
