--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="Code opfrissen/">AristoElegance</a>
         <a href="Herhaling HTML-CSS Hero Header/">Kreed</a>
-        <a href="/Responsive hero header/">Responsive hero header</a>
+        <a href="Responsive hero header/">Responsive hero header</a>
     </nav>
     <div class="container">
         <section id="website1">
@@ -30,7 +30,7 @@
         <section id="website3">
             <h2>Responsive hero header</h2>
             <p>Van opdracht "Responsive hero header"</p>
-            <a class="website-link animated" href="/Responsive hero header/">Bezoek Website</a>
+            <a class="website-link animated" href="Responsive hero header/">Bezoek Website</a>
         </section>
     </div>
     <script>
