--- a/Responsive hero header/index.html
+++ b/Responsive hero header/index.html
@@ -34,7 +34,7 @@
 
         <div class="intro">
             <h1 class="intro-title">Build your own </br> wall of sound.</h1>
-            <p class="intro-description">Winners aren’t made overnight. Over 50 years of sound and </br> design expertise has been distilled into each and every </br> Marshall speaker, bringing that big stage presence home for </br> your listening enjoyment.</p>
+            <p class="intro-description">Winners aren’t made overnight. Over 50 years of sound and design expertise has been distilled into each and every Marshall speaker, bringing that big stage presence home for your listening enjoyment.</p>
             <button class="intro-button">View All Products</button>
         </div>        
     </main>
