--- a/Responsive hero header/index.html
+++ b/Responsive hero header/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kreed</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -40,11 +40,10 @@
     </main>
 </body>
 <script>
-document.querySelector('nav').style.display = 'none';
+document.querySelector('nav').style.display = 'block';
 document.getElementById('menu-toggle').addEventListener('change', function() {
   var nav = document.querySelector('nav');
-  nav.style.display = this.checked ? 'block' : 'none';
+  nav.style.display = this.checked ? 'none' : 'block';
 });
-
 </script>
 </html>
