--- a/GIP/index.html
+++ b/GIP/index.html
@@ -22,7 +22,7 @@
             <a href="/index.html" class="nav-links">Home</a>
             <a href="#over-ons" class="nav-links">Over Ons</a> 
             <a href="#gallery" class="nav-links">Galerij</a>
-            <a href="/contactpage.html" class="nav-links">Contact</a>
+            <a href="contactpage.html" class="nav-links">Contact</a>
             </li>
         </nav>
 
