--- a/GIP/contactpage.html
+++ b/GIP/contactpage.html
@@ -15,12 +15,19 @@
             <div class="logo">
                 <a href="/index.html"><img src="img/UB Logo.svg" alt="UB Logo"></a>
             </div>
-            <li>
-            <a href="/index.html" class="nav-links">Home</a>
-            <a href="#over-ons" class="nav-links">Over Ons</a> 
-            <a href="#gallery" class="nav-links">Galerij</a>
-            <a href="#" class="nav-links">Contact</a>
-            </li>
+        
+            <section class="navbar-links">
+                <a href="/index.html" class="nav-links">Home</a>
+                <a href="#over-ons" class="nav-links">Over Ons</a>
+                <a href="#gallery" class="nav-links">Galerij</a>
+                <a href="contactpage.html" class="nav-links">Contact</a>
+            </section>
+        
+            <div class="hamburger">
+                <div class="line-hamburger"></div>
+                <div class="line-hamburger"></div>
+                <div class="line-hamburger"></div>
+            </div>
         </nav>
 
         <section id="main-contactpage">
@@ -42,7 +49,7 @@
                 <div class="line"></div>
             </div>
             <div class="form-group">
-                <button type="submit">indienen</button>
+                <button type="submit">Contacteer ons</button>
             </div>
         </form>
 
@@ -64,4 +71,5 @@
         <img class="plant-contactpage" src="img/plant-contactpage.png" alt="plant-contactpage">
     </header>
 </body>
+<script src="main.js"></script>
 </html>
