--- a/GIP/index.html
+++ b/GIP/index.html
@@ -16,11 +16,11 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="/index.html"><img src="img/UB Logo.svg" alt="UB Logo"></a>
+                <a href="index.html"><img src="img/UB Logo.svg" alt="UB Logo"></a>
             </div>
         
             <section class="navbar-links">
-                <a href="/index.html" class="nav-links">Home</a>
+                <a href="index.html" class="nav-links">Home</a>
                 <a href="#over-ons" class="nav-links">Over Ons</a>
                 <a href="#gallery" class="nav-links">Galerij</a>
                 <a href="contactpage.html" class="nav-links">Contact</a>
@@ -152,10 +152,10 @@
                 </div>
             </div>
             <div class="fastlinks">
-                <a href="/index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#over-ons">Over Ons</a>
                 <a href="#gallery">Galerij</a>
-                <a href="#">Contact</a>
+                <a href="contactpage.html">Contact</a>
             </div>
         </section>
     </footer>
