--- a/GIP/contactpage.html
+++ b/GIP/contactpage.html
@@ -13,13 +13,13 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="/index.html"><img src="img/UB Logo.svg" alt="UB Logo"></a>
+                <a href="index.html"><img src="img/UB Logo.svg" alt="UB Logo"></a>
             </div>
         
             <section class="navbar-links">
-                <a href="/index.html" class="nav-links">Home</a>
-                <a href="#over-ons" class="nav-links">Over Ons</a>
-                <a href="#gallery" class="nav-links">Galerij</a>
+                <a href="index.html" class="nav-links">Home</a>
+                <a href="index.html" class="nav-links">Over Ons</a>
+                <a href="index.html" class="nav-links">Galerij</a>
                 <a href="contactpage.html" class="nav-links">Contact</a>
             </section>
         
