--- a/GIP/contactpage.html
+++ b/GIP/contactpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Urban Blooms Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
             <section class="navbar-links">
                 <a href="index.html" class="nav-links">Home</a>
                 <a href="index.html" class="nav-links">Over Ons</a>
-                <a href="index.html" class="nav-links">Galerij</a>
+                <a href="gallerypage.html" class="nav-links">Galerij</a>
                 <a href="contactpage.html" class="nav-links">Contact</a>
             </section>
         
@@ -70,6 +70,7 @@
 
         <img class="plant-contactpage" src="img/plant-contactpage.png" alt="plant-contactpage">
     </header>
+
+    <script src="main.js"></script>
 </body>
-<script src="main.js"></script>
 </html>
