--- a/GIP/contactpage.html
+++ b/GIP/contactpage.html
@@ -10,7 +10,7 @@
     <div id="loader-container">
         <dotlottie-player src="https://lottie.host/bd6875a6-6c8d-4fe3-b8a8-141d556b5257/jL6lZHqb7L.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
         </div>
-    <header>
+    <header class="header-contactpage">
         <nav>
             <div class="logo">
                 <a href="index.html"><img src="img/UB Logo.svg" alt="UB Logo"></a>
@@ -54,9 +54,11 @@
         </form>
 
         <div class="contact-plaats">
-            <h2>Contact</h2>
+            <div class="contact-contactpage">
+                <h2>Contact</h2>
             <p>info@urbanblooms.org</p>
-            <br><br><br><br><br><br>
+        </div>
+
             <h2>Gevestigd in</h2>
             <p>Brussel,<br>België</p>
             <div class="socials-contactpage">
@@ -67,9 +69,8 @@
         </div>
         </div>
     </section>
-
-        <img class="plant-contactpage" src="img/plant-contactpage.png" alt="plant-contactpage">
     </header>
+    <img class="plant-contactpage" src="img/plant-contactpage.png" alt="plant-contactpage">
 
     <script src="main.js"></script>
 </body>
