--- a/GIP/index.html
+++ b/GIP/index.html
@@ -18,6 +18,8 @@
             <div class="logo">
                 <a href="index.html"><img src="img/UB Logo.svg" alt="UB Logo"></a>
             </div>
+
+            <div class="background-overlay"></div> <!-- New background overlay -->
         
             <section class="navbar-links">
                 <a href="index.html" class="nav-links">Home</a>
