--- a/GIP/index.html
+++ b/GIP/index.html
@@ -19,7 +19,7 @@
                 <a href="index.html"><img src="img/UB Logo.svg" alt="UB Logo"></a>
             </div>
 
-            <div class="background-overlay"></div> <!-- New background overlay -->
+            <div class="background-overlay"></div>
         
             <section class="navbar-links">
                 <a href="index.html" class="nav-links">Home</a>
