--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
         <h1>Xian Van Droogenbroeck</h1>
     </header>
     <nav>
-        <a href="Code opfrissen/">AristoElegance</a>
-        <a href="Herhaling HTML-CSS Hero Header/">Kreed</a>
-        <a href="Responsive hero header/">Responsive hero header</a>
+        <a href="Code opfrissen/index.html">AristoElegance</a>
+        <a href="Herhaling HTML-CSS Hero Header/index.html">Kreed</a>
+        <a href="Responsive hero header door Xian Van Droogenbroeck/index.html">Responsive hero header</a>
+        <a href="GIP/index.html">Urban Blooms</a>
     </nav>
     <div class="container">
         <section id="website1">
             <h2>AristoElegance</h2>
             <p>Van opdracht "Even opfrissen".</p>
-            <a class="website-link animated" href="Code opfrissen/">Bezoek Website</a>
+            <a class="website-link animated" href="Code opfrissen/index.html">Bezoek Website</a>
         </section>
         <section id="website2">
             <h2>Kreed</h2>
             <p>Van opdracht "Hero Header"</p>
-            <a class="website-link animated" href="Herhaling HTML-CSS Hero Header/">Bezoek Website</a>
+            <a class="website-link animated" href="Herhaling HTML-CSS Hero Header/index.html">Bezoek Website</a>
         </section>
         <section id="website3">
             <h2>Responsive hero header</h2>
             <p>Van opdracht "Responsive hero header"</p>
-            <a class="website-link animated" href="Responsive hero header/">Bezoek Website</a>
+            <a class="website-link animated" href="Responsive hero header door Xian Van Droogenbroeck/index.html">Bezoek Website</a>
         </section>
         <section id="website4">
             <h2>GIP</h2>
