--- a/GIP/index.html
+++ b/GIP/index.html
@@ -34,7 +34,6 @@
                 <div class="line-hamburger"></div>
             </div>
         </nav>
-        
 
         <div class="landing-page-plant">
         <img src="img/plant-landingpage.png" alt="Landing Page Plant">
@@ -43,6 +42,10 @@
     <div class="header-text">
         <img src="img/header-title.png" alt="Waar beton bloeit en verbinding groeit">
         <p>Urban Blooms, de toonaangevende NGO in Brussel, transformeert de stad met bloemen en kunst. Doe mee en help ons Brussel tot bloei te brengen!</p>
+    </div>
+
+    <div class="header-button">
+        <span><a href="grafischwerkpage.html"><button type="button">Ben je ons al tegengekomen?</button></a></span>
     </div>
     </header>
     <main>
@@ -68,16 +71,14 @@
             <div class="card">
                 <img src="img/Onze projecten.jpg" alt="Image Onze projecten">
                 <h2>Onze <span>projecten</span></h2>
-                <p>Ontdek hoe Urban Blooms stedelijke ruimtes verandert in groene oases. Bekijk onze projecten en doe mee aan onze missie!</p>
+                <p>Ontdek hoe Urban Blooms stedelijke ruimtes verandert in groene oases.</p>
                 <button class="card-button"><a href="#">Lees meer</a></button>
             </div>
         </div>
             
         <h1 class="video-text" data-aos="fade-up">Video</h1>
         <div class="video" data-aos="fade-up">
-            <img src="img/Pijl rechts.png" alt="playButton" id="play" class="tap">
-            <video id="player" preload="auto" loop="loop"
-            src="img/Snelle jongen dunne jasje.mp4" type="video/mp4"></video>
+            <iframe width="1000" height="500" src="https://www.youtube.com/embed/5q7ixOsDT0Y?si=AxyvunxcWQ2cn_pL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
     </main>
