--- a/GIP/contactpage.html
+++ b/GIP/contactpage.html
@@ -33,7 +33,7 @@
         <section id="main-contactpage">
         <form method="POST" id="contactForm" name="contactForm" class="contactForm">
             <div class="form-group">
-                <input type="text" class="form-control" name="name" id="name" placeholder="Name">
+                <input type="text" class="form-control" name="name" id="name" placeholder="Naam">
                 <div class="line"></div>
             </div>
             <div class="form-group">
@@ -41,11 +41,11 @@
                 <div class="line"></div>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Onderwerp">
                 <div class="line"></div>
             </div>
             <div class="form-group">
-                <textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Create a message here"></textarea>
+                <textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Bericht"></textarea>
                 <div class="line"></div>
             </div>
             <div class="form-group">
