--- a/GIP/gallerypage.html
+++ b/GIP/gallerypage.html
@@ -45,12 +45,12 @@
                 <li data-category="beeld" data-keywords="bloem schaduw interieur binnen pot bloempot"><div><img src="img/Galerij/Bloem met schaduw RGB.jpg" alt="Photo 6"></div></li>
                 <li data-category="beeld" data-keywords="interieur binnen raam bloempot vlaggen ballonen keuken"><div><img src="img/Galerij/Bloemen aan raam RGB.jpg" alt="Photo 7"></div></li>
                 <li data-category="beeld" data-keywords="bloem hand close-up"><div><img src="img/Galerij/Bloemen in hand RGB.jpg" alt="Photo 8"></div></li>
-                <li data-category="beeld" data-keywords="bos buiten bomen"><div><img src="img/Galerij/Bos RGB.jpg" alt="Photo 9"></div></li>
+                <li data-category="beeld" data-keywords="bos buiten bomen boom"><div><img src="img/Galerij/Bos RGB.jpg" alt="Photo 9"></div></li>
                 <li data-category="beeld" data-keywords="bedrijf donatie box doos donneren"><div><img src="img/Galerij/Donatie box RGB.jpg" alt="Photo 10"></div></li>
                 <li data-category="beeld" data-keywords="gebouw groen appartementen"><div><img src="img/Galerij/Groen gebouw RGB.jpg" alt="Photo 11"></div></li>
                 <li data-category="beeld" data-keywords="bedrijf hoodie man mens persoon buiten bril"><div><img src="img/Galerij/Hoodie RGB.jpg" alt="Photo 12"></div></li>
                 <li data-category="beeld" data-keywords="aarde"><div><img src="img/Galerij/Logo in aarde RGB.jpg" alt="Photo 13"></div></li>
-                <li data-category="beeld" data-keywords="plant bomen parking buiten auto's"><div><img src="img/Galerij/Parking RGB.jpg" alt="Photo 14"></div></li>
+                <li data-category="beeld" data-keywords="plant bomen boom parking buiten auto's"><div><img src="img/Galerij/Parking RGB.jpg" alt="Photo 14"></div></li>
                 <li data-category="beeld" data-keywords="plant aarde licht zon hoopje hoop"><div><img src="img/Galerij/Plant op hoop aarde RGB.jpg" alt="Photo 15"></div></li>
                 <li data-category="beeld" data-keywords="bedrijf mensen vrouw man jongen meisje praten buiten"><div><img src="img/Galerij/Pratende mensen RGB.jpg" alt="Photo 16"></div></li>
                 <li data-category="beeld" data-keywords="plant struik diversiteit"><div><img src="img/Galerij/Struik RGB.jpg" alt="Photo 17"></div></li>
