--- a/GIP/index.html
+++ b/GIP/index.html
@@ -76,7 +76,7 @@
             </div>
         </div>
             
-        <h1 class="video-text" data-aos="fade-up">Video</h1>
+        <h1 class="video-text" data-aos="fade-up">Documentaire</h1>
         <div class="video" data-aos="fade-up">
             <iframe width="1000" height="500" src="https://www.youtube.com/embed/5q7ixOsDT0Y?si=AxyvunxcWQ2cn_pL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
