--- a/GIP/gallerypage.html
+++ b/GIP/gallerypage.html
@@ -64,6 +64,8 @@
                 <li data-category="grafisch" data-keywords="pdf flyer folder"><a href="grafisch werk/Flyer.pdf" target="_blank"><embed src="grafisch werk/Flyer.pdf" type="application/pdf" width="600" height="400"></a></li>
                 <li data-category="grafisch" data-keywords="pdf infograpic"><a href="grafisch werk/Infograpic.pdf" target="_blank"><embed src="grafisch werk/Infograpic.pdf" type="application/pdf" width="600" height="400"></a></li>
                 <li data-category="grafisch" data-keywords="pdf instagram story"><a href="grafisch werk/Instagram story.pdf" target="_blank"><embed src="grafisch werk/Instagram story.pdf" type="application/pdf" width="600" height="400"></a></li>
+
+                <li data-keywords="ontwikkeling ontwikeling logo urbanblooms urban-blooms urban blooms"><img src="img/Logo-ontwikkeling.jpg" alt="Logo ontwikkeling"></li>
             </ul>
         </div>
                 
