--- a/GIP/index.html
+++ b/GIP/index.html
@@ -60,7 +60,7 @@
                 <img src="img/Word vrijwilliger.jpg" alt="Image Word vrijwilliger">
                 <h2>Word <span>vrijwilliger</span></h2>
                 <p>Doe vrijwilligerswerk bij Urban Blooms en draag bij aan onze missie.</p>
-                <button class="card-button"><a href="#">Lees meer</a></button>
+                <button class="card-button"><a href="contactpage.html">Contacteer ons</a></button>
             </div>
             <div class="card">
                 <img src="img/Doneer.jpg" alt="Image Doneer">
@@ -78,8 +78,7 @@
             
         <h1 class="video-text" data-aos="fade-up">Documentaire</h1>
         <div class="video" data-aos="fade-up">
-            <iframe width="1000" height="500" src="https://www.youtube.com/embed/5q7ixOsDT0Y?si=AxyvunxcWQ2cn_pL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
+            <iframe width="1000" height="500" src="https://www.youtube.com/embed/5q7ixOsDT0Y?si=GXZR0FdxGzUghGTl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        </div>
 
     </main>
     <footer>
